--- a/blog/resources/sass/app.scss
+++ b/blog/resources/sass/app.scss
@@ -6,3 +6,41 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+.counter{
+    margin-right: 30px;
+    font-size: 10px;
+    text-align: center;
+    font-weight: bold;
+
+    strong{
+        display: block;
+        font-size: 2em;
+    }
+
+    .vote, .answer{
+        width: 60px;
+        height: 60px;
+
+    }
+    .status{
+        &.unanswered{
+            border: none;
+        }
+        &.answered{
+            border: 1px solid $green;
+            color: $green;
+        }
+        &.answered-accepted{
+            background: $green;
+            color: $white;
+        }
+    }
+    .view{
+        margin-top: 10px;
+    }
+
+}
+form.form-delete{
+    display: inline;
+}
